# makershub

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/app/: README.md  __init__.py  cli.py  main.py
apps/api/app/core/: README.md  __init__.py  logging.py
apps/api/app/infrastructure/: README.md
apps/api/app/interfaces/: README.md
apps/api/app/modules/: README.md
apps/api/app/shared/: README.md  pagination.py  request_context.py  responses.py
apps/api/migrations/: README.md  env.py
apps/api/migrations/versions/: 20260429_0001_create_identity_tables.py  20260429_0002_allow_pending_local_account_password.py  20260429_0003_create_auth_sessions.py  20260502_0004_create_organization_tables.py  20260502_0005_create_foundation_tables.py  20260502_0006_align_system_operator_permissions.py  20260502_0007_restrict_system_admin_default_permissions.py  20260511_0008_create_points_tables.py  20260512_0009_align_position_codes.py  20260512_0010_rename_account_and_role_grant_tables.py  20260512_0011_create_point_rule_tables.py  20260512_0012_create_workbench_task_tables.py  20260512_0013_allow_task_publishers_view_point_rules.py  (+1 more)
apps/api/tests/: README.md  test_app.py  test_audit.py  test_auth_api.py  test_borrowing.py  test_engineering_standards.py  test_files.py  test_identity.py  test_infrastructure.py  test_logging.py  test_organization_api.py  test_permissions.py  test_points.py  test_tokens.py  test_workbench.py
(+363 files in other folders)
