[project]
name = "makershub-api"
version = "0.1.0"
description = "MakersHub FastAPI service"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "aiomysql>=0.2.0",
  "bcrypt>=4.0.0,<5.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "PyJWT>=2.10.0",
  "passlib[bcrypt]>=1.7.4",
  "minio>=7.2.0",
  "httpx>=0.27.0",
  "loguru>=0.7.0"
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ARG", "DTZ", "PT"]
ignore = [
  # FastAPI 依赖注入需要在参数默认值里声明 Depends/Security/Query。
  "B008",
  # 显式 if/else 在令牌、认证等安全分支中比长三元表达式更容易审阅。
  "SIM108"
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
